# lazybv2int

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  abd.sy  bench_6956.smt2  bnw_lemma.txt  bv2int.py  conf.py  configure.sh  lazybvsolver.py  main.cpp  meeting_clark.md
ahmed/: 6moves_mti_7-Atd_00004_bmc.smt2  bench_15975.smt2  bench_4669.smt2  bench_4669.smt2.minimized.smt2  bench_4669.smt2.minimized2.smt2  bench_5639.smt2  bench_5639.smt2.minimized.smt2  bench_921.smt2  bench_921.smt2.minimized.smt2  bench_921.smt2.minimized.smt2.minimized.smt2  bv-term-small-rw_1053.smt2  bv-term-small-rw_1242.smt2  bv-term-small-rw_249.smt2  bv-term-small-rw_249.smt2.minimized.smt2  bv-term-small-rw_249.smt2.minimized.smt2.even.more.smt2  bv-term-small-rw_250.smt2  bv-term-small-rw_32.smt2  bv-term-small-rw_322.smt2  bv-term-small-rw_32_less.smt2  bv-term-small-rw_459.smt2  bv-term-small-rw_491.smt2  bv-term-small-rw_933.smt2  bvshl_1407.smt2  bw_arrays.smt2  bw_new.smt2  nlzbe064.smt2  penrosesmall.5.asp.smt2  picorv32-check-unrolled.smt2  src_wget_vc18198.smt2  symbols.smt2
bw-op-synth/cpp/: bw_functions.cpp  bw_functions.h
bw-op-synth/sygus_problems/: bvand_1.sy  bvand_1_lia_builtin.sy  bvand_1_lia_explicit.sy  bvand_1_lia_zero_one.sy  bvand_1_nia_builtin.sy  bvand_1_nia_zero_one.sy  bvand_1_relational_builtin.sy  bvand_1_relational_explicit.sy  bvand_1_trivial_explicit.sy  bvand_2.sy  bvand_2_lia_builtin.sy  bvand_2_lia_explicit.sy  bvand_2_lia_zero_one.sy  bvand_2_nia_builtin.sy  bvand_2_nia_explicit.sy  bvand_2_nia_zero_one.sy  bvand_2_relational_builtin.sy  bvand_2_relational_explicit.sy  bvand_2_trivial_explicit.sy  bvand_3.sy  bvand_3_lia_builtin.sy  bvand_3_lia_explicit.sy  bvand_3_lia_zero_one.sy  bvand_3_nia_builtin.sy  bvand_3_nia_explicit.sy  bvand_3_nia_zero_one.sy  bvand_3_relational_builtin.sy  bvand_3_relational_explicit.sy  bvand_3_trivial_explicit.sy  bvand_4.sy  bvand_4_lia_builtin.sy  bvand_4_lia_explicit.sy  bvand_4_lia_zero_one.sy  bvand_4_nia_builtin.sy  bvand_4_nia_explicit.sy  bvand_4_nia_zero_one.sy  bvand_4_relational_builtin.sy  bvand_4_relational_explicit.sy  bvand_4_trivial_explicit.sy  bvand_5.sy  (+330 more)
bw-op-synth/sygus_results/: .merged_functions.txt.swp  all_functions.txt  all_functions.txt_chosen.txt  functions.txt  functions.txt_chosen.txt  functions_short.txt  lia_functions.txt  lia_functions.txt_chosen.txt  merged_functions.txt  nia_functions.txt  nia_functions.txt_chosen.txt  relational_functions.txt  relational_functions.txt_chosen.txt  trivial_functions.txt
contrib/: setup-ddsmt.sh  setup-smt-switch.sh  update-smt-switch.sh
contrib/smtlib2parser-1.4/: .hg_archival.txt  .hgtags
python/: bv2int.py  notes
rw/: neg_elim.smt2  or_elim.smt2  template.smt2  xor_elim.smt2
rw/finite/neg_eliminate/: 1.smt2  10.smt2  11.smt2  12.smt2  13.smt2  14.smt2  (+58 more)
scripts/: choose_functions.py  enlarge_bws.py  fetch_cluster_synth_results.sh  filter_smtlib.py  gen_cpp.sh  gen_sygus_problems.py  get_blockchain_benchmarks.sh  get_sygus_problem_for_bw_op_and_gran.py  merge_chosen_results.sh  merge_nia_and_lia.sh  merge_trivial_and_min.sh  rw_2020_verification.py  smtlib2cvc4.out  smtlib2cvc4.sh
smtcomp20/: Makefile  slide.tex  smtcomp-2020.aux  smtcomp-2020.bbl  smtcomp-2020.bib  smtcomp-2020.blg  smtcomp-2020.fdb_latexmk  smtcomp-2020.fls  smtcomp-2020.tex  starexec_run_default.sh
solidity/: checked_int_add.py_128.smt2  checked_int_add.py_16.smt2  checked_int_add.py_256.smt2  checked_int_add.py_32.smt2  checked_int_add.py_64.smt2  checked_int_add.py_8.smt2  checked_int_div.py_128.smt2  checked_int_div.py_16.smt2  checked_int_div.py_256.smt2  checked_int_div.py_32.smt2  checked_int_div.py_64.smt2  checked_int_div.py_8.smt2  checked_int_mul_16.py_128.smt2  checked_int_mul_16.py_16.smt2  checked_int_mul_16.py_256.smt2  checked_int_mul_16.py_32.smt2  checked_int_mul_16.py_64.smt2  checked_int_mul_16.py_8.smt2  checked_int_sub.py_128.smt2  checked_int_sub.py_16.smt2  checked_int_sub.py_256.smt2  checked_int_sub.py_32.smt2  checked_int_sub.py_64.smt2  checked_int_sub.py_8.smt2  checked_uint_add.py_128.smt2  checked_uint_add.py_16.smt2  checked_uint_add.py_256.smt2  checked_uint_add.py_32.smt2  checked_uint_add.py_64.smt2  checked_uint_add.py_8.smt2  checked_uint_mul_16.py_128.smt2  checked_uint_mul_16.py_16.smt2  checked_uint_mul_16.py_256.smt2  checked_uint_mul_16.py_32.smt2  checked_uint_mul_16.py_64.smt2  checked_uint_mul_16.py_8.smt2  checked_uint_sub.py_128.smt2  checked_uint_sub.py_16.smt2  checked_uint_sub.py_256.smt2  checked_uint_sub.py_32.smt2  (+15 more)
src/: .bv2int.h.swp  .lbv2isolver.cpp.swp  axioms.cpp  axioms.h  bv2int.cpp  bv2int.h  bw_functions.cpp  bw_functions.h  gmp_utils.cpp  gmp_utils.h  identity_walker.cpp  identity_walker.h  lbv2isolver.cpp  lbv2isolver.h  main.cpp  opts.cpp  opts.h  postprocessor.cpp  postprocessor.h  preprocessor.cpp  preprocessor.h  smtlibmsatparser.cpp  smtlibmsatparser.h  smtlibsolver.cpp  smtlibsolver.h  utils.cpp  utils.h
test/: CMakeLists.txt  Makefile  compare_script_for_ddsmt.sh  minimize_diff.sh  remove_assuming.sed  run_regressions.sh  test1.cpp  test2.cpp  test3.cpp  test4.cpp
test/smtlib_files/: .fuzz28.smtv1.smt2.swp  QF_BV_bv_bv_counter_cc_ref_max.smt2  a78test0002.smtv1.smt2  a95test0002.smtv1.smt2  bench_38.delta.smt2  bench_921.smt2.minimized.smt2.minimized.smt2  bitvec0.delta01.smtv1.smt2  bitvec0.delta01.smtv1.smt2.think  bitvec0.smtv1.smt2  bitvec1.smtv1.smt2  bitvec2.smtv1.smt2  bitvec3.smtv1.smt2  bitvec5.smtv1.smt2  bitvec5.smtv1.smt2.disabled  bitvec7.smtv1.smt2  bool-model.smt2  bool-to-bv-all.smt2  bool-to-bv-ite.smt2  bug260a.smtv1.smt2  bug260b.smtv1.smt2  bug440.smtv1.smt2  bug578.smt2  bug733.smt2  bug734.smt2  bug787.smt2  bug_extract_mult_leading_bit.smt2  bug_min1.smt2  bv-abstr-bug.smt2  bv-options1.smt2  bv-options2.smt2  bv-options3.smt2  bv-options4.smt2  bv-proof00.smtv1.smt2  bv-term-small-rw_245_4bits.smt2.minimized.smt2  bv-term-small-rw_931.smt2.minimized_4bits.smt2  bv-to-bool1.smtv1.smt2  bv-to-bool2.smt2  bv_consts_dec.smt2  bv_eq_diamond10.smtv1.smt2  bv_eq_diamond11.smtv1.smt2  (+184 more)
(+320 files in other folders)
